[gd_scene load_steps=2 format=3 uid="uid://b4qxqh8x7y3wf"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.180392, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "ALS TAVERN"
horizontal_alignment = 1

[node name="VSeparator1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Quit"

[node name="VSeparator2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VersionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "v1.0.0 - Alpha"
horizontal_alignment = 1

[node name="ConfirmDialog" type="ConfirmationDialog" parent="."]
title = "Start New Game?"
initial_position = 2
size = Vector2i(300, 100)
dialog_text = "Starting a new game will overwrite your current save. Continue?"
ok_button_text = "Yes, Start New Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtons/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtons/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtons/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtons/QuitButton" to="." method="_on_quit_pressed"]
